--- a/TyDtk/TableHeardViewForUser.xib
+++ b/TyDtk/TableHeardViewForUser.xib
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <objects>
@@ -20,6 +21,9 @@
                         <constraint firstAttribute="height" constant="60" id="bmv-oA-RvY"/>
                     </constraints>
                     <state key="normal" image="TouXinagTest.jpg"/>
+                    <connections>
+                        <action selector="btnImgClick:" destination="8rI-Tb-KEi" eventType="touchUpInside" id="5xA-qI-K0L"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fKE-H9-htD">
                     <rect key="frame" x="101" y="132" width="200" height="20"/>
