--- a/TyDtk/TyPractice.storyboard
+++ b/TyDtk/TyPractice.storyboard
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
@@ -69,8 +70,8 @@
                                             </constraints>
                                             <variation key="default">
                                                 <mask key="constraints">
-                                                    <exclude reference="hrY-mv-dK8"/>
                                                     <exclude reference="I2w-hK-18Q"/>
+                                                    <exclude reference="hrY-mv-dK8"/>
                                                 </mask>
                                             </variation>
                                         </tableViewCellContentView>
