--- a/TyDtk/Common.storyboard
+++ b/TyDtk/Common.storyboard
@@ -1831,6 +1831,24 @@
             </objects>
             <point key="canvasLocation" x="-6227.5" y="4313.5"/>
         </scene>
+        <!--Pay View Controller-->
+        <scene sceneID="AGF-XH-oXO">
+            <objects>
+                <viewController storyboardIdentifier="PayViewController" id="oBM-m4-JTM" customClass="PayViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="4rK-kh-D43"/>
+                        <viewControllerLayoutGuide type="bottom" id="Ect-Og-Rk0"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="6py-VM-dxe">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="4nW-Y5-jXf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-6174" y="5059"/>
+        </scene>
         <!--My Note View Controller-->
         <scene sceneID="xSa-Du-Ij1">
             <objects>
