--- a/TyDtk/Test.storyboard
+++ b/TyDtk/Test.storyboard
@@ -4,24 +4,5 @@
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
-    <scenes>
-        <!--Pay View Controller-->
-        <scene sceneID="d1q-yW-z4r">
-            <objects>
-                <viewController storyboardIdentifier="PayViewController" id="9MA-wB-oDA" customClass="PayViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="By3-9Y-bfZ"/>
-                        <viewControllerLayoutGuide type="bottom" id="w2g-cm-Bh5"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="zya-iV-7qx">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6z7-Qe-06G" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="267" y="1"/>
-        </scene>
-    </scenes>
+    <scenes/>
 </document>
