--- a/TyDtk/TyCommon.storyboard
+++ b/TyDtk/TyCommon.storyboard
@@ -816,8 +816,8 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="wc8-SC-8bf"/>
                                 <exclude reference="85f-xx-6xI"/>
+                                <exclude reference="wc8-SC-8bf"/>
                                 <exclude reference="X5L-pv-SAJ"/>
                             </mask>
                         </variation>
@@ -1122,8 +1122,8 @@
                         </constraints>
                         <variation key="default">
                             <mask key="constraints">
-                                <exclude reference="jX6-sU-XIN"/>
                                 <exclude reference="6Xh-y0-ww0"/>
+                                <exclude reference="jX6-sU-XIN"/>
                             </mask>
                         </variation>
                     </view>
@@ -1913,7 +1913,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0Qg-r6-oDV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-7773" y="5105"/>
+            <point key="canvasLocation" x="-7728" y="5105"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="kys-B5-UyC">
+            <objects>
+                <viewController storyboardIdentifier="uuuuu" id="1KV-Nl-ezT" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="mbx-Gl-WCN"/>
+                        <viewControllerLayoutGuide type="bottom" id="kcQ-TE-1VW"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kwh-4o-8k4">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="8Pf-Jm-eGe" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-7344" y="5291"/>
         </scene>
     </scenes>
     <resources>
