--- a/TyDtk/TyCommon.storyboard
+++ b/TyDtk/TyCommon.storyboard
@@ -1897,6 +1897,62 @@
             </objects>
             <point key="canvasLocation" x="-7840.5" y="4337.5"/>
         </scene>
+        <!--Pay View Controller-->
+        <scene sceneID="9Rf-aa-x3p">
+            <objects>
+                <viewController storyboardIdentifier="PayViewController" id="dqd-yw-NHA" customClass="PayViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fPN-fW-53O"/>
+                        <viewControllerLayoutGuide type="bottom" id="FWi-QF-g2O"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="DPG-jJ-DR6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="xHq-SG-J9d">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="cellpay" id="uSq-GI-Meh">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uSq-GI-Meh" id="VoN-50-dru">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="y2o-Bb-5CD">
+                                                    <rect key="frame" x="74" y="14" width="42" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                                <connections>
+                                    <outlet property="dataSource" destination="dqd-yw-NHA" id="Zfh-ey-KW0"/>
+                                    <outlet property="delegate" destination="dqd-yw-NHA" id="Ged-af-NDP"/>
+                                </connections>
+                            </tableView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="xHq-SG-J9d" firstAttribute="top" secondItem="fPN-fW-53O" secondAttribute="bottom" id="5C5-jv-2Ap"/>
+                            <constraint firstAttribute="trailing" secondItem="xHq-SG-J9d" secondAttribute="trailing" id="HOv-5O-CxB"/>
+                            <constraint firstItem="xHq-SG-J9d" firstAttribute="leading" secondItem="DPG-jJ-DR6" secondAttribute="leading" id="U3i-WT-Nrw"/>
+                            <constraint firstItem="FWi-QF-g2O" firstAttribute="top" secondItem="xHq-SG-J9d" secondAttribute="bottom" id="b8y-pB-P3O"/>
+                        </constraints>
+                    </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <connections>
+                        <outlet property="tableViewPay" destination="xHq-SG-J9d" id="aUO-Ss-bbH"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E2f-kJ-9TO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-8283.5" y="5233.5"/>
+        </scene>
     </scenes>
     <resources>
         <image name="loginBrg.jpeg" width="700" height="1308"/>
