--- a/TyDtk/TyLearn.storyboard
+++ b/TyDtk/TyLearn.storyboard
@@ -22,7 +22,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pow-3q-363" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1701.5" y="351.5"/>
+            <point key="canvasLocation" x="-1738.5" y="351.5"/>
         </scene>
         <!--练习中心-->
         <scene sceneID="zVk-VZ-Klr">
@@ -106,6 +106,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SP2-Li-4K3" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1282.5" y="351.5"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="zX9-uQ-PSh">
+            <objects>
+                <viewController storyboardIdentifier="trtrttrrtt" id="qml-K4-bgp" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="OmH-dU-mTh"/>
+                        <viewControllerLayoutGuide type="bottom" id="69p-sL-vFI"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HLz-ab-Fuk">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lbb-h2-ixW" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-422" y="327"/>
         </scene>
     </scenes>
 </document>
