--- a/TyDtk/TyLearn.storyboard
+++ b/TyDtk/TyLearn.storyboard
@@ -24,6 +24,24 @@
             </objects>
             <point key="canvasLocation" x="-1738.5" y="351.5"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="Grb-PG-y6h">
+            <objects>
+                <viewController storyboardIdentifier="yyyyyyyy" id="2Ws-WH-e5N" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="CoA-xN-9j2"/>
+                        <viewControllerLayoutGuide type="bottom" id="aa3-NY-Emy"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="eDA-O7-y09">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bxW-Tq-VcD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1631" y="1056"/>
+        </scene>
         <!--练习中心-->
         <scene sceneID="zVk-VZ-Klr">
             <objects>
